Implementing the user profile section

--- a/src/app/pages/menu-navegacion/menu-navegacion.component.html
+++ b/src/app/pages/menu-navegacion/menu-navegacion.component.html
@@ -1,10 +1,13 @@
 <header>
     <nav class="nav">
         <img class="nav__logo" src="../../../assets/img/amadeus-logo-dark-sky.png" alt="logo">
-        <ul class="nav__lista">
-            <li><a href="../index">Inicio</a></li>
-            <li><a href="https://amadeus.com/es/contacto" target="_blank">Contacto</a></li>
-            <li><a href="https://amadeus.com/en" target="_blank">Amadeus</a></li>
-        </ul>
+        <div class="nav__container">
+            <ul class="nav__lista">
+                <li><a href="../index">Inicio</a></li>
+                <li><a href="https://amadeus.com/es/contacto" target="_blank">Contacto</a></li>
+                <li><a href="https://amadeus.com/en" target="_blank">Amadeus</a></li>
+            </ul>
+            <app-usuario/>
+        </div>
     </nav>
 </header>
