--- a/src/app/pages/menu-navegacion/menu-navegacion.component.css
+++ b/src/app/pages/menu-navegacion/menu-navegacion.component.css
@@ -1,4 +1,4 @@
-header nav{
+.nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -6,7 +6,15 @@ header nav{
     /* position: fixed; */
     top: 0;
     width: 100%;
-    height: 10vh;
+    height: 60px;
+}
+
+.nav__container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-right: 20px;
 }
 
 .nav__logo{
@@ -25,14 +33,11 @@ header nav{
     justify-content: center;
     align-items: center;
     margin: 5px;
-    
-    
 }
 
 .nav__lista li{
     text-decoration: none;
     list-style: none;
-    
 }
 
 .nav__lista li a {
