--- a/src/app/pages/tarjetas/tarjetas.component.css
+++ b/src/app/pages/tarjetas/tarjetas.component.css
@@ -26,7 +26,7 @@ body{
     height: 100%; 
     background-color: #000835;
     margin: 1% 5%;
-    padding: 5px 5px;
+    padding: 20px;
     /* position: absolute; */
     /* top: 10%; */
     /* left: 20%; */
