--- a/src/app/pages/usuario/usuario.component.html
+++ b/src/app/pages/usuario/usuario.component.html
@@ -1,7 +1,11 @@
-<article class="usuario">
-    @if (avatar == undefined) {
-        <img class="avatar" src="https://static.vecteezy.com/system/resources/previews/019/879/186/non_2x/user-icon-on-transparent-background-free-png.png" alt="avatar">
-    }@else {
-        <img class="avatar" src="{{avatar}}" alt="avatar">
-    }
+<article class="usuario" (click)="handleVisible()">
+  <img class="avatar" src="{{avatar}}" alt="avatar">
 </article>
+
+@if (esVisible()) {
+    <div class="infoUsuario">
+        <h3>Nombre: <span>{{nombre}}</span></h3>
+        <h3>Correo: <span>{{correo}}</span></h3>
+        <button class="buttonSesion" (click)="cerrarSesion()">Cerrar sesion</button>
+    </div>
+}
