--- a/src/app/pages/usuario/usuario.component.html
+++ b/src/app/pages/usuario/usuario.component.html
@@ -4,8 +4,13 @@
 
 @if (esVisible()) {
     <div class="infoUsuario">
+      @if (ruta == "/index" || ruta == "/perfil") {
+        <img class="imgIcon" src="https://cdn-icons-png.flaticon.com/512/995/995168.png" alt="planetaIcon">
+        <button class="buttonSesion">Iniciar travesia</button>
+      }@else {
         <h3>Nombre: <span>{{nombre}}</span></h3>
         <h3>Correo: <span>{{correo}}</span></h3>
         <button class="buttonSesion" (click)="cerrarSesion()">Cerrar sesion</button>
+      }
     </div>
 }
