refactor: add conditional to display "Europa" or "Asia" based on continent and update variables to display data

--- a/src/app/pages/destino/destino.component.html
+++ b/src/app/pages/destino/destino.component.html
@@ -1,68 +1,143 @@
 <main class="conteiner">
-        <h1 class="conteiner__titulo">Tus Destinos:</h1>
+  <h1 class="conteiner__titulo">Tus Destinos:</h1>
 
-        <div [hidden]="control"><h3 class="conteiner__titulo">
-            Tus Gustos son bastante exóticos, te sugerimos los siguientes lugares:
-        </h3></div>
-    
-    <div class="conteiner--opciones">
+  <div [hidden]="control">
+    <h3 class="conteiner__titulo">
+      Tus Gustos son bastante exóticos, te sugerimos los siguientes lugares:
+    </h3>
+  </div>
 
-        <section class="opciones--opcion">
+  <div class="conteiner--opciones">
+    <section class="opciones--opcion">
+      <div class="opcion__encabezado">
+        <h2 class="opcion__encabezado__nombre" (click)="destino()">
+          Aventura en América
+        </h2>
+      </div>
 
-            <div class="opcion__encabezado">
-                <h2 class="opcion__encabezado__nombre" (click)="destino()">Aventura en América</h2>
-            </div>
+      <div class="opcion__destino">
+        <input
+          [value]="america[0]?.nombreDestino"
+          class="opcion__encabezado__destino focus-in-expand"
+          type="text"
+          readonly
+          id="destinoAmerica"
+        />
+      </div>
 
-            <div class="opcion__destino">
-                <input [value]="america" class="opcion__encabezado__destino focus-in-expand" type="text" readonly id="destinoAmerica">
-            </div>
+      <div class="opcion__imagen">
+        <img
+          [src]="america[0]?.img"
+          alt="Destino en America"
+          id="imagenAmerica"
+        />
+        <div class="overlay">
+          <div class="text">
+            <p>Pais:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="america[0]?.pais"
+              readonly
+            />
+            <p>Idioma:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="america[0]?.idioma"
+              readonly
+            />
+            <p>Lugar Imperdible:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="america[0]?.lugarImperdible"
+              readonly
+            />
+            <p>Comida típica:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="america[0]?.comidaTipica"
+              readonly
+            />
+          </div>
+        </div>
+      </div>
 
-            <div class="opcion__imagen">
-                <img [src]="srcA" alt="Destino en America" id="imagenAmerica">
-                <div class="overlay">
-                    <div class="text">
-                        <p>Pais:</p> <input class="text__input" type="text" [value]="datosA[0]" readonly>
-                        <p>Idioma:</p><input class="text__input" type="text" [value]="datosA[1]" readonly>
-                        <p>Lugar Imperdible:</p><input class="text__input" type="text" [value]="datosA[2]" readonly>
-                        <p>Comida típica:</p><input class="text__input" type="text" [value]="datosA[3]" readonly>
-                    </div>
-                </div>
-            </div>
+      <div class="opcion__link__item">
+        <a routerLink="/planes"
+          ><img src="../../../assets/img/paquete.png" alt=""
+        /></a>
+        <span class="tooltiptext">Explora tus opciones</span>
+      </div>
+    </section>
 
-            <div class="opcion__link__item">
-                <a routerLink="/planes"><img src="../../../assets/img/paquete.png" alt=""></a>
-                <span class="tooltiptext">Explora tus opciones</span>
-            </div>
+    <section class="opciones--opcion">
+      <div class="opcion__encabezado">
+        <h2 class="opcion__encabezado__nombre">
+          Aventura en
+          <ng-container
+            *ngIf="europa[0]?.continente === 'Europa'; else showAsia"
+          >
+            Europa
+          </ng-container>
+          <ng-template #showAsia> Asia </ng-template>
+        </h2>
+      </div>
 
-        </section>
+      <div class="opcion__destino">
+        <input
+          [value]="europa[0]?.nombreDestino"
+          class="opcion__encabezado__destino focus-in-expand"
+          type="text"
+          readonly
+          id="destinoEuropa"
+        />
+      </div>
 
-        <section class="opciones--opcion">
+      <div class="opcion__imagen">
+        <img [src]="europa[0]?.img" alt="Destino en Europa" id="imagenEuropa" />
+        <div class="overlay">
+          <div class="text">
+            <p>Pais:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="europa[0]?.pais"
+              readonly
+            />
+            <p>Idioma:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="europa[0]?.idioma"
+              readonly
+            />
+            <p>Lugar Imperdible:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="europa[0]?.lugarImperdible"
+              readonly
+            />
+            <p>Comida típica:</p>
+            <input
+              class="text__input"
+              type="text"
+              [value]="europa[0]?.comidaTipica"
+              readonly
+            />
+          </div>
+        </div>
+      </div>
 
-            <div class="opcion__encabezado">
-                <h2 class="opcion__encabezado__nombre">Aventura en Europa</h2>
-            </div>
-
-            <div class="opcion__destino">
-                <input [value]="europa" class="opcion__encabezado__destino focus-in-expand" type="text" readonly id="destinoEuropa">
-            </div>
-
-            <div class="opcion__imagen">
-                <img [src]="srcE" alt="Destino en Europa" id="imagenEuropa">
-                <div class="overlay">
-                    <div class="text">
-                        <p>Pais:</p> <input class="text__input" type="text" [value]="datosE[0]" readonly>
-                        <p>Idioma:</p><input class="text__input" type="text" [value]="datosE[1]" readonly>
-                        <p>Lugar Imperdible:</p><input class="text__input" type="text" [value]="datosE[2]" readonly>
-                        <p>Comida típica:</p><input class="text__input" type="text" [value]="datosE[3]" readonly>
-                    </div>
-                </div>
-            </div>
-
-            <div class="opcion__link__item">
-                <a routerLink="/planes"><img src="../../../assets/img/paquete.png" alt=""></a>
-                <span class="tooltiptext">Explora tus opciones</span>
-            </div>
-
-        </section>
-    </div>
+      <div class="opcion__link__item">
+        <a routerLink="/planes"
+          ><img src="../../../assets/img/paquete.png" alt=""
+        /></a>
+        <span class="tooltiptext">Explora tus opciones</span>
+      </div>
+    </section>
+  </div>
 </main>
